# solid-pop3d

./: AUTHORS  CONFIGFILE  ChangeLog  Makefile.in  README  README.md  THANKS  VIRTUALS  acconfig.h  aclocal.m4  config.h.in  config.sub  configure  configure.ac  configure.in
debian/: README.Debian  changelog  config  control  copyright  dirs  docs  examples  fix_manpages.sh  init  pam  postinst  postrm  preinst  prerm  rules  spop3d.conf  templates  watch
debian/patches/: 02-configure.patch  03-debian-base.patch  04-liblockfile.patch  05-unlock.patch  06-autologout-username.patch  07-allowuser.patch  08-init.patch  09-authmappeduser.patch  10-usermapprefix.patch  11-parserloop.patch  12-multiple-mailbox.patch  13-max-sessions.patch  14-gcc-4.0-amd64.patch  15-gcc-warning.patch  16-manpages-hyphens.patch  17-close-fds.patch  18-init-fix.patch  19-gcc-warnings.patch  series
debian/po/: cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  ru.po  sv.po  vi.po
doc/: Makefile.in  config.example  spop3d
man/: Makefile.in  dot-spop3d.5  pop_auth.1  spop3d.8  spop3d.conf.5
src/: Makefile.in  apop.c  apop.h  authenticate.c  authenticate.h  cmds.c  cmds.h  configfile.c  configfile.h  const.h  fdfgets.c  fdfgets.h  includes.h  log.c  log.h  mailbox.c  mailbox.h  maildir.c  maildir.h  maildrop.c  maildrop.h  main.c  mapping.c  mapping.h  md5.c  memops.c  options.c  options.h  pop_auth.c  response.c  response.h  spipv6.h  standalone.c  userconfig.c  userconfig.h  vsnprintf.c
